# Malix

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  main.cpp  main.malix  tests.malix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ast/expressions/: BinaryExpression.cpp  BinaryExpression.h  ConstantExpression.cpp  ConstantExpression.h  DoubleExpression.cpp  DoubleExpression.h  Expression.h  IntegerExpression.cpp  IntegerExpression.h  MatchExpression.cpp  MatchExpression.h  NumberExpression.cpp  NumberExpression.h  StringExpression.cpp  StringExpression.h  UnaryExpression.h  ValueExpression.cpp  VariableExpression.cpp
ast/statements/: AssigmentStatement.cpp  AssigmentStatement.h  IfStatement.h  PrintStatement.cpp  PrintStatement.h  Statement.h
lib/: Constants.cpp  Constants.h  Variables.h
parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
parser/token/: Token.cpp  Token.h  TokenType.h
src/: main.cpp
src/ast/expressions/: AnonymousFunctionExpression.cpp  AnonymousFunctionExpression.h  AnonymousObjectExpression.cpp  AnonymousObjectExpression.h  ArrayExpression.cpp  ArrayExpression.h  ArrayIndexExpression.cpp  ArrayIndexExpression.h  BinaryExpression.cpp  BinaryExpression.h  BlockExpression.cpp  BlockExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  ExclamationExpression.cpp  ExclamationExpression.h  Expression.h  FunctionExpression.cpp  FunctionExpression.h  ObjectIndexExpression.cpp  ObjectIndexExpression.h  UnaryExpression.cpp  UnaryExpression.h  ValueExpression.h  VariableExpression.cpp  VariableExpression.h
src/ast/statements/: ArrayAssigmentStatement.cpp  ArrayAssigmentStatement.h  AssigmentStatement.cpp  AssigmentStatement.h  BlockStatement.cpp  BlockStatement.h  (+37 more)
src/lib/: Functions.cpp  Functions.h  Packages.cpp  Packages.h  Variables.cpp  Variables.h
src/parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/utils/: Value.cpp  Value.h
tests/: arithmetic.malix  conditional.malix  fs.malix  functions.malix  loops.malix  math.malix  objects.malix  package.malix  print.malix  threads.malix  variables.malix
utils/: Value.cpp  Value.h
(+34 files in other folders)
